<resources>
    <string name="term_times">Term Times</string>
    <string name="College_app">Bath College</string>
    <string name="title_activity_contact">Contact Us</string>
    <string name="search_title">Search...</string>

    <!--Contact Us-->
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_btn">Contact Form</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <!---->
    <string name="course_list">Available Courses</string>
    <string name="course">Course</string>
    <string name="Course_detail_activity_title">Course Details</string>

    <!---->
    <string name="search_hint">Search...</string>
    <string name="Share">Share</string>
</resources>
