<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattern"
    android:tileMode="repeat"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bathCollegeGreen"
        android:theme="@style/AppTheme" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:layout_weight="1"
        android:layout_gravity="top"
        android:scaleType="fitCenter"
        android:src="@drawable/postal_letter"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:text="@string/contact_form_name"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        android:textColor="#fff"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/your_name"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold|italic"
        android:textColor="#fff"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="14sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:text="@string/contact_form_email"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        android:textColor="#fff"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/your_email"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold|italic"
        android:textColor="#fff"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textSize="14sp" />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:text="@string/contact_form_subject"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        android:textColor="#fff"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/your_subject"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold|italic"
        android:textColor="#fff"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="14sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:paddingLeft="3dp"
        android:text="@string/contact_form_message"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        android:textColor="#fff"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/your_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textStyle="bold|italic"
        android:textColor="#fff"
        android:height="180dp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:textSize="14sp" />

    <Button
        android:id="@+id/post_message"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:background="@color/bathCollegeGreen"
        android:paddingBottom="1dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="1dp"
        android:text="@string/contact_form_button"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

</LinearLayout>

